ci: Makefile stuff

--- a/Dockerfile-release
+++ b/Dockerfile-release
@@ -1,7 +1,8 @@
-FROM debian:bookworm AS base
+FROM debian:stable AS base
 
 RUN apt-get update && apt-get install -y ca-certificates
 
 FROM base 
+
 COPY ./statesman /usr/bin/statesman
 ENTRYPOINT ["/usr/bin/statesman"]
